loading of my info completed

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="plus">+</string>
     <string name="minus">-</string>
 
+    
+    <string name="watched_status_watching">Watching</string>
+    <string name="watched_status_compleated">Completed</string>
+    <string name="watched_status_onhold">On-Hold</string>
+    <string name="watched_status_dropped">Dropped</string>
+    <string name="watched_status_plan">Plan to Watch</string>
+    
     <string-array name="anime_status_options">
         <item>Watching</item>
         <item>Completed</item>
