adding "my info" controls

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -46,5 +46,8 @@ Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel 
         <item>(2) Horrible</item>
         <item>(1) Appalling</item>
     </string-array>
+    
+    <string name="watched_format">Watched %1$d/%2$d</string>
+    <string name="plus_one">+1</string>
 
 </resources>
