--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
  Copyright 2013 C. A. Fitzgerald
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,13 +13,12 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. 
---> 
+-->
 <resources>
-    
+
     <string name="ipsum">quam massa, semper malesuada ante. Donec suscipit facilisis urna sit amet ullamcorper. Maecenas in lectus mauris, id aliquet elit. Phasellus non sem risus. Aliquam erat volutpat. Mauris nisi nulla, congue sed aliquam vel, consectetur bibendum massa. Mauris eleifend commodo bibendum. Donec pellentesque vehicula nibh a aliquet. Suspendisse consequat, eros ac ornare volutpat, metus diam feugiat diam, a mollis dui purus ac tortor.
 
 Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel facilisis nulla neque a tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat blandit augue et eleifend. Cras facilisis, dui vel luctus viverra, metus mi aliquam nibh, ac pharetra est arcu non sem. Fusce ac dolor sed leo iaculis pellentesque vel at tellus. Curabitur et justo ligula. Vivamus velit odio, volutpat id facilisis quis, pulvinar ut nulla. Pellentesque facilisis malesuada lacus ultrices euismod.</string>
-
     <string name="hello">Hello MALForAndroid2!</string>
     <string name="app_name">MALForAndroid2</string>
     <string name="username_hint">Username</string>
@@ -32,14 +31,12 @@ Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel 
     <string name="login_error_no_creds">Please enter both a username and a password</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
-
-    
     <string name="watched_status_watching">Watching</string>
     <string name="watched_status_compleated">Completed</string>
     <string name="watched_status_onhold">On-Hold</string>
     <string name="watched_status_dropped">Dropped</string>
     <string name="watched_status_plan">Plan to Watch</string>
-    
+
     <string-array name="anime_status_options">
         <item>Watching</item>
         <item>Completed</item>
@@ -47,7 +44,6 @@ Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel 
         <item>Dropped</item>
         <item>Plan to Watch</item>
     </string-array>
-    
     <string-array name="anime_score_options">
         <item>Select</item>
         <item>(10) Masterpiece</item>
@@ -61,13 +57,21 @@ Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel 
         <item>(2) Horrible</item>
         <item>(1) Appalling</item>
     </string-array>
-    
+
     <string name="watched_format">Watched %1$d/%2$d</string>
     <string name="prequel_format">Prequels: %1$d</string>
     <string name="sequel_format">Sequels: %1$d</string>
     <string name="side_story_format">Side Stories: %1$d</string>
     <string name="spin_off_format">Spin Offs: %1$d</string>
     <string name="summaries_format">Summaries: %1$d</string>
+    <string name="type_format">Type: %1$s</string>
+    <string name="status_format">Status: %1$s</string>
+    <string name="classification_format">Classification %1$s</string>
+    <string name="rank_format">Rank: %1$d</string>
+    <string name="popularity_format">Popularity: %1$d</string>
+    <string name="members_score_format">Member Score: %1$.2f</string>
+    <string name="members_count_format">Member Count: %1$d</string>
+    <string name="favorited_count_format">Favorited: %1$d</string>
     <string name="alternative_versions_format">Alternates: %1$d</string>
     <string name="plus_one">+1</string>
 
