--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -29,14 +29,13 @@ Nam mattis, justo tincidunt aliquam eleifend, nibh velit sollicitudin eros, vel 
     <string name="login_error_invalid_combo">Invalid user and password combination</string>
     <string name="login_error_unknown_issue">Unknown server error. Please try again later</string>
     <string name="login_error_no_creds">Please enter both a username and a password</string>
-    <string name="plus">+</string>
-    <string name="minus">-</string>
     <string name="watched_status_watching">Watching</string>
     <string name="watched_status_compleated">Completed</string>
     <string name="watched_status_onhold">On-Hold</string>
     <string name="watched_status_dropped">Dropped</string>
     <string name="watched_status_plan">Plan to Watch</string>
     <string name="placard_text">Select an item for details</string>
+    <string name="all">All</string>
 
     <string-array name="anime_status_options">
         <item>Watching</item>
