--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="watched_status_plan">Plan to Watch</string>
     <string name="placard_text">Select an item for details</string>
     <string name="all">All</string>
+    <string name="read_status_watching">Reading</string>
+	<string name="read_status_plan">Plan to Read</string>
 
     <string-array name="anime_status_options">
         <item>Watching</item>
@@ -83,5 +85,5 @@
 	<string name="search">Search</string>
 	<string name="not_in_list">Not in your list</string>
 	<string name="remove_anime">Remove Anime</string>
-
+	
 </resources>
