--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -100,6 +100,7 @@
 	<string name="search">Search</string>
 	<string name="not_in_list">Not in your list</string>
 	<string name="remove_anime">Remove Anime</string>
+	<string name="remove_manga">Remove Manga</string>
 	
 	<string-array name="drop_down_nav_options">
         <item>Anime</item>
