--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="members_count_format">Member Count: %1$d</string>
     <string name="favorited_count_format">Favorited: %1$d</string>
     <string name="alternative_versions_format">Alternates: %1$d</string>
+    <string name="manga_adaptations_format">Manga: %1$d</string>
     <string name="score_format">Score: %1$d</string>
     
     <string name="plus_one">+1</string>
